src/styles/components/AddressBook.scss
.address-book-container {

  margin-top: 20px;
  display: flex;
  flex-direction: row;
  flex: 2;
  justify-content: flex-start;

  .contact {
    height: 100px;
    flex: 1;
    display: flex;
    margin: 10px;
    cursor: pointer;

    .MuiAvatar-root {
      width: 60px;
      height: 60px;
      margin: 15px;

      .avatar {
        width: 60px;
      }
    }

    .person {
      margin-top: 20px;
      margin-left: 20px;
      justify-content: flex-start;
      flex-direction: column;
      display: flex;
      font-weight: bold;

      .name {
        color: white;
        font-size: 20px;
      }

      .address {
        color: white;
      }
    }

    .right {
      display: flex;
      flex: 1;
      flex-direction: row;
      justify-content: flex-end;
    }

    &:hover {
      background-color: white;
      transition: 0.4s ease;

      .person {
        .name {
          color: $color-main !important;
        }

        .address {
          color: $color-main !important;
        }

      }
    }
  }

}

